--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="stylesheet" href="./styles/output.css" />
     <title>Delivety Master</title>
 </head>
@@ -86,18 +84,18 @@
             </div>
 
             <div class="flex gap-2">
-                <img src="./assets/hamb-3.png" alt="Hamburguer Duplo"
+                <img src="./assets/hamb-3.png" alt="Hamburguer Extra"
                     class="w-28 h-28 rounded-md hover:scale-110"
                 />
                 <div>
-                    <p class="font-bold">Hamburgues Duplo</p>
+                    <p class="font-bold">Hamburgues Extra</p>
                     <p class="text-sm">Pão leve de fermentação natucal da Trigon burguer 160g, Queijo prato e maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 28.90</p>
                         <button  
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburgues Duplo" 
+                            data-name="Hamburgues Extra" 
                             data-price="28.90"   
                         >
                             <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -107,18 +105,18 @@
             </div>
 
             <div class="flex gap-2">
-                <img src="./assets/hamb-4.png" alt="Hamburguer Duplo"
+                <img src="./assets/hamb-4.png" alt="Hamburguer Triplo"
                     class="w-28 h-28 rounded-md hover:scale-110"
                 />
                 <div>
-                    <p class="font-bold">Hamburgues Duplo</p>
+                    <p class="font-bold">Hamburgues Triplo</p>
                     <p class="text-sm">Pão leve de fermentação natucal da Trigon burguer 160g, Queijo prato e maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 28.90</p>
                         <button  
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hamburgues Duplo" 
+                            data-name="Hamburgues Triplo" 
                             data-price="28.90"   
                         >
                             <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -195,7 +193,7 @@
 
 
     <!--Inicio modal-->
-    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
 
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-1xl mb-2">Meu Carinho</h2>
@@ -239,7 +237,18 @@
 
 
 
-
+    <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
