--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/output.css" />
+
+    <!--Meta TAG OG-->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Delivety Master"/>
+    <meta property="og:image" content="https://delivery-master.vercel.app/assets/FolderDeliveryMaster.png"/>
+    <meta property="og:description" content="O melhor Hamburguer"/>
+    <meta property="og:site_name" content="MasterDelivery"/>
+
+
     <title>Delivety Master</title>
 </head>
 <body>
