--- a/index.html
+++ b/index.html
@@ -202,32 +202,56 @@
 
 
     <!--Inicio modal-->
-    <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
 
-        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
-            <h2 class="text-center font-bold text-1xl mb-2">Meu Carinho</h2>
 
-            <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
 
-            <p class="font-bold">Toral: <span id="cart-total">0.00</span></p>
-            <p class="font-bold mt-4">Endereço de entrega:</p>
-            <input 
-                type="text"
-                placeholder="Rua/Avenida/Quadra/Setor"
-                id="andress"
-                class="w-full border-2 p-1 rounded my-1"
-            />
-            <p class="text-red-500 hidden" id="address-warn">Digite seu endereço Completo.</p>
 
-            <div class="flex items-center justify-between mt-5 w-full">
-                <button id="close-modal-btn">Fechar</button>
-                <button id="checkount-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar Pedido</button>
+
+
+
+
+        <div class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
+            <style>
+                #cart-items {
+                    max-height: 300px; /* Defina a altura máxima desejada */
+                    overflow-y: auto; /* Adicione uma barra de rolagem vertical quando necessário */
+                }
+            </style>
+            <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+                <h2 class="text-center font-bold text-1xl mb-2">Meu Carrinho</h2>
+
+                <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
+
+                <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
+                <p class="font-bold mt-4">Endereço de entrega:</p>
+                <input 
+                    type="text"
+                    placeholder="Rua/Avenida/Quadra/Setor"
+                    id="address"
+                    class="w-full border-2 p-1 rounded my-1"
+                />
+                <p class="text-red-500 hidden" id="address-warn">Digite seu endereço completo.</p>
+
+                <div class="flex items-center justify-between mt-5 w-full">
+                    <button id="close-modal-btn">Fechar</button>
+                    <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar Pedido</button>
+                </div>
             </div>
-
-
-
         </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--Inicio modal-->
 
 
