--- a/index.html
+++ b/index.html
@@ -115,7 +115,30 @@
                 </div>
             </div>
 
-            <div class="flex gap-2 product-item border-b border-gray-400 pb-4">
+
+
+
+
+
+
+
+
+            <!--Adicionar mais semore no meio, Pra nao tiras as linhas que separa-->
+            <!--Adicionar mais semore no meio, Pra nao tiras as linhas que separa-->
+
+
+
+
+
+
+
+
+
+
+
+            
+
+            <div class="flex gap-2">
                 <img src="./assets/hamb-4.png" alt="Hamburguer Triplo"
                     class="w-28 h-28 rounded-md hover:scale-110"
                 />
@@ -172,7 +195,12 @@
             </div>
 
 
-            <div class="flex gap-2 w-full product-item border-b border-gray-400 pb-4">
+            <!--Adicionar mais semore no meio, Pra nao tiras as linhas que separa-->
+
+            <!--Adicionar mais semore no meio, Pra nao tiras as linhas que separa-->
+
+
+            <div class="flex gap-2 w-full ">
                 <img src="./assets/refri-2.png" alt="Hamburguer Duplo"
                     class="w-28 h-28 rounded-md hover:scale-110"
                 />
@@ -236,10 +264,11 @@
 
                 <div class="flex items-center justify-between mt-5 w-full">
                     <button id="close-modal-btn">Fechar</button>
-                    <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar Pedido</button>
+                    <button id="checkount-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar Pedido</button>
                 </div>
             </div>
         </div>
+        
 
 
 
