--- a/index.html
+++ b/index.html
@@ -265,6 +265,15 @@
       />
       <p class="text-red-500 hidden" id="address-warn">Digite seu endereço completo!</p>
 
+      <p class="font-bold mt-4">Forma de Pagamento</p>
+      <input 
+        type="text"
+        placeholder="Pix/Cartão/Troco?"
+        id="address"
+        class="w-full border-2 p-1 rounded my-1"
+      />
+      <p class="text-red-500 hidden" id="address-warn">Pix/Cartão/Dinheiro-Troco?</p>
+
       <div class="flex items-center justify-between mt-5 w-full">
         <button id="close-modal-btn">Fechar</button>
         <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar pedido</button>
