--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
 
   <!-- MODAL CART -->
   <div 
-    class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden"
-    id="cart-modal"
+  class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] flex items-center justify-center hidden"
+  id="cart-modal"
   >
 
-    <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+    <div class="bg-white p-5 rounded-md w-full max-w-[90%] h-[80vh] sm:max-w-[640px] sm:h-auto mx-auto overflow-auto">
       <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
-      <div id="cart-items" class="flex justify-between mb-2 flex-col max-h-[400px] overflow-auto"></div>
+      <div id="cart-items" class="flex justify-between mb-2 flex-col max-h-[200px] overflow-auto"></div>
 
       <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
 
@@ -268,11 +268,11 @@
       <p class="font-bold mt-4">Forma de Pagamento</p>
       <input 
         type="text"
-        placeholder="Pix/Cartão/Troco?"
+        placeholder="Informe: Pix/Cartão/Troco?"
         id="address"
         class="w-full border-2 p-1 rounded my-1"
       />
-      <p class="text-red-500 hidden" id="address-warn">Pix/Cartão/Dinheiro-Troco?</p>
+      <p class="text-red-500 hidden" id="address-warn">Informe: Pix/Cartão/Dinheiro-Troco?</p>
 
       <div class="flex items-center justify-between mt-5 w-full">
         <button id="close-modal-btn">Fechar</button>
