--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="bg-white p-5 rounded-md w-full max-w-[90%] h-[80vh] sm:max-w-[640px] sm:h-auto mx-auto overflow-auto">
       <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
-      <div id="cart-items" class="flex justify-between mb-2 flex-col max-h-[200px] overflow-auto"></div>
+      <div id="cart-items" class="flex justify-between mb-2 flex-col max-h-[200px] overflow-auto color: #9ca3af"></div>
 
       <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
 
